# qluent-cli

./: .gitignore  CLAUDE.md  README.md  REPO_SPLIT.md  pyproject.toml
.claude-plugin/: plugin.json
.claude/skills/compare-trees/: SKILL.md
.claude/skills/investigate/: SKILL.md
.claude/skills/qluent-interpretation/: SKILL.md
.claude/skills/rca/: SKILL.md
.claude/skills/trend/: SKILL.md
.github/workflows/: qluent-cli-binaries.yml
hooks/: hooks.json
hooks-handlers/: session-start.sh
npm/: .gitignore  README.md  RELEASING.md  install.js  package.json
npm/lib/: installer.js
npm/tests/: installer.test.js
scripts/: local_smoke_test.sh
src/qluent_cli/: __init__.py  __main__.py  auth.py  build_binary.py  claude_instructions.md  client.py  config.py  dates.py  formatters.py  main.py  matching.py  rca.py  trees.py  utils.py
src/qluent_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_auth.py  test_build_binary.py  test_client.py  test_config.py  test_login.py  test_matching.py  test_rca.py  test_setup.py  test_trees.py
